New references and better formatting

--- a/references.bib
+++ b/references.bib
@@ -1,25 +1,42 @@
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-        [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
-    number =       "10",
-    pages =        "891--921",
-    year =         "1905",
-    DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
+@misc{paypalfees,
+    author = "PayPal",
+    title = "{PayPal}: {Transaction} fees",
+    year = {2017 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://www.paypalobjects.com/digitalassets/c/website/marketing/na/us/ebooks/pdf/fees-page.pdf}"
 }
- 
-@book{latexcompanion,
-    author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-    title     = "The \LaTeX\ Companion",
-    year      = "1993",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts"
+
+@misc{ccfees,
+    author = "Ben Dwyer",
+    title = "{CardFellow}: {Average} credit card processing fees",
+    year = {2017 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://www.cardfellow.com/average-fees-for-credit-card-processing/}"
 }
- 
-@misc{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+
+@article{ethereumwp,
+    author = "Vitalik Buterin",
+    title = "Ethereum: A Next-Generation Smart Contract and Decentralized Application Platform",
+    year = "2013",
+    note = "Retrieved from: \url{https://github.com/ethereum/wiki/wiki/White-Paper}"
 }
+
+@misc{ethchainsize,
+    author = "Etherscan",
+    title = "{Ethereum} {ChainData} {Size} ({Geth} w/{FullArchive} {Sync})",
+    year = {2017 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://etherscan.io/chart/chaindatasize}"
+}
+
+@misc{btcchainsize,
+    author = "BitInfoCharts",
+    title = "{Bitcoin} ({BTC}) stats and information",
+    year = {2017 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://bitinfocharts.com/bitcoin/}"
+}
+
+@misc{transactbandwidth,
+    author = "MyBroadBand",
+    title = "{Bitcoin} and {Ethereum} vs {Visa} and {PayPal} – {Transactions} per second",
+    year = {22 Apr 2017 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://mybroadband.co.za/news/banking/206742-bitcoin-and-ethereum-vs-visa-and-paypal-transactions-per-second.html}"
+}
+
