--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \author{Stuart Farmer}
 \date{stu@hadronledger.com}
 
+\usepackage{url}
+\def\UrlBreaks{\do\/\do-}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{verbatim}
@@ -35,7 +37,7 @@
 \maketitle
 
 \section{Introduction}
-The best technology can never succeed unless it is propgated to the masses in an appropriate way. We see examples of this throughout history. Henry Ford brought the price of the automobile down so that more people could afford one which then spurred a transportation revolution. Steve Jobs and Bill Gates took the computer out of the mainframe rooms of high tech businesses and colleges and packed them into a size that could be used by consumers. We are taking the same approach with blockchain technology. By modelling our tools off of the most popular command-line interfaces, package managers, and web applications, we are abstracting the difficult portions of blockchain technology away and shaping it like modern web development. Thus, Hadron is a set of blockchain development tools and infrastructure designed to be easy and understandable to the average developer.
+The best technology can never succeed unless it is propagated to the masses in an appropriate way. We see examples of this throughout history. Henry Ford brought the price of the automobile down so that more people could afford one which then spurred a transportation revolution. Steve Jobs and Bill Gates took the computer out of the mainframe rooms of high tech businesses and colleges and packed them into a size that could be used by consumers. We are taking the same approach with blockchain technology. By modelling our tools off of the most popular command-line interfaces, package managers, and web applications, we are abstracting the difficult portions of blockchain technology away and shaping it like modern web development. Thus, Hadron is a set of blockchain development tools and infrastructure designed to be easy and understandable to the average developer.
 
 \section{Motivation}
 
@@ -47,13 +49,13 @@ Laid out in this white paper is our critiques of the current state of the market
 
 \section{Problems with Current Blockchain\\ Implementations}
 
-There are many fundamental flaws with the blockchain architecture that prevent it from becoming a mainstream technology. These flaws exist on both the user’s side as well as the developer / service provider’s side. Laid out are the areas in which we improve upon the current blockchain implementations with this project.
+There are many fundamental flaws with the blockchain architecture that prevent it from becoming a mainstream technology. These flaws exist on both the user’s side as well as the developer\,/\,service provider’s side. Laid out are the areas in which we improve upon the current blockchain implementations with this project.
 
 \begin{center}
 \textbf{Transaction Fees}
 \end{center}
 
-Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%. Compared to centralized systems such as PayPal, Mastercard, and Visa, Bitcoin is actually about twice as expensive. See the chart below.
+Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%. Compared to centralized systems such as PayPal\,\cite{paypalfees}, Mastercard, and Visa\,\cite{ccfees}, Bitcoin is actually about twice as expensive. See the chart below.
 
 It should be noted the fundamentals of cryptocurrency are why users feel justified with this discrepancy. The decentralized nature of ownership outweighs the additional costs. However, on a macroeconomic scale, cost efficiency will outweigh fundamental allure.
 
@@ -61,21 +63,21 @@ It should be noted the fundamentals of cryptocurrency are why users feel justifi
 \textit{“But what about Ethereum? Their transaction fees are only 0.3\%!”}
 \end{center}
 	
-While this is true, the Ethereum blockchain was not designed as a transfer of value network like Bitcoin was, but rather a smart contracts network to enable trustless and decentralized software systems. We have to remember that users instead pay for the number of operations that occur on the chain and that this number of operations continues to increase as more and more complicated smart contracts are deployed. A major selling point of Ethereum was the ability to add smart contracts as ‘libraries’ in a similar way as abstraction in software development works. Thus, we can safely assume that over time, as more complex smart contracts are made, the cost of interacting with the main Ethereum blockchain increases over time. This mechanism by charging developers on the operations distinctiveness innovation and complex smart contract systems that Ethereum needs to be a long term success.
+While this is true, the Ethereum blockchain was not designed as a transfer of value network\,\cite{ethereumwp} like Bitcoin was, but rather a smart contracts network to enable trustless and decentralized software systems. We have to remember that users instead pay for the number of operations that occur on the chain and that this number of operations continues to increase as more and more complicated smart contracts are deployed. A major selling point of Ethereum was the ability to add smart contracts as ‘libraries’ in a similar way as abstraction in software development works. Thus, we can safely assume that over time, as more complex smart contracts are made, the cost of interacting with the main Ethereum blockchain increases over time. This mechanism by charging developers on the operations distinctiveness innovation and complex smart contract systems that Ethereum needs to be a long term success.
 
 \begin{center}
 \textbf{Bloated Chains}
 \end{center}
 
-Carrying on with the Ethereum model, because the ledger is public, anyone can deploy whatever smart contracts they’d like. As a result, even though the blockchain is only two years old, the size of a full node is 242GB, which is even larger than the current size of a Bitcoin full node which is around 160GB. Having to install a full node, or at least a light chain which is still around 20Gb (cite) of data, is a hefty barrier of entry for someone who just wants to dabble in smart contract development.
+Carrying on with the Ethereum model, because the ledger is public, anyone can deploy whatever smart contracts they’d like. As a result, even though the blockchain is only two years old, the size of a full node is 242GB\,\cite{ethchainsize}, which is even larger than the current size of a Bitcoin full node which is around 152GB\,\cite{btcchainsize}. Having to install a full node, or at least a light chain which is still around 20Gb of data, is a hefty barrier of entry for someone who just wants to dabble in smart contract development.
 
-Compare the time it takes to fully sync a node with the time it takes to install Python, Node.js, or any other programming environment to start poking around. The inconvenience, and download size alone are infeasible to anyone halfway curious about blockchain technology.
+Compare the time it takes to fully sync a node with the time it takes to install Python, Node.js, or any other programming environment to start poking around. The inconvenience and download size alone are infeasible to most developers and companies, let alone the average user who is curious about blockchain technology.
 
 \begin{center}
 \textbf{Transactions per Second (Scalability)}
 \end{center}
 
-Modern blockchains have a notoriously slow throughput rate which causes transaction times to be slow, and a backlog of pending transactions to pile up. This is an unacceptable replacement for the current financial systems that hardcore evangelists aim to accomplish. In comparison, PayPal released a case study in May of 2015 where they were able to create a system throughput rate of over a billion transactions a day. That translates to about 11,600 transactions per second. Compare this to Bitcoin, which has a throughput rate of only 3 transactions per second. Likewise, Ethereum boasts a mere 15 transactions per second (citation needed)
+Modern blockchains have a notoriously slow throughput rate which causes transaction times to be slow, and a backlog of pending transactions to pile up. This is an unacceptable replacement for the current financial systems that hardcore evangelists aim to accomplish. In comparison, PayPal released a case study in May of 2015 where they were able to create a system throughput rate of over a billion transactions a day. That translates to about 11,600 transactions per second. Compare this to Bitcoin, which has a throughput rate of only 3 transactions per second. Likewise, Ethereum boasts a mere 15 transactions per second\,\cite{transactbandwidth}.
 
 This distinctiveness enterprises that deal with assets in a traditional high throughput database structure to sacrifice capacity for the benefits of high record maintenance.
 
@@ -124,7 +126,7 @@ Furthermore, the Hadron Wrapper will provide a local server with an Ethereum blo
 
 A web service to manage the chain from a graphical web interface similar to Parse will also be included out of the box.
 
-Optionally deployable instances of IPFS/IPNS and Tor.
+Optionally deployable instances of IPFS\,/\,IPNS and Tor.
 
 \begin{center}
 \textbf{Deployment}
@@ -347,9 +349,8 @@ Furthermore, by providing a centralized community, innovation can prosper and bu
 Lastly, through the Hadron Ledger, we are able to connect all of these projects together on a single routing system that facilitates swap transactions so that private chains can retain the benefits of self-management and still take advantage of a larger ecosystem of great applications.
 
 
-\nocite{*}
 \bibliography{references}{}
-\bibliographystyle{plain}
+\bibliographystyle{ieeetr}
 
 
 \end{document}
