--- a/references.bib
+++ b/references.bib
@@ -40,3 +40,37 @@
     howpublished = "Retrieved from: \url{https://mybroadband.co.za/news/banking/206742-bitcoin-and-ethereum-vs-visa-and-paypal-transactions-per-second.html}"
 }
 
+@misc{chainsize,
+    author = "Daniel",
+    title = "datadir size (MB)",
+    year = {1 Mar 2016 (accessed 17 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{http://bc.daniel.net.nz/}"
+}
+
+@article{paypalcasestudy,
+    author = "Akara Sucharitakul",
+    title = "squbs: A New, Reactive Way for PayPal to Build Applications",
+    year = "2016",
+    note = "Retrieved from: \url{https://www.paypal-engineering.com/2016/05/11/squbs-a-new-reactive-way-for-paypal-to-build-applications}"
+}
+
+@misc{pip,
+    author = "Python Software Foundation",
+    title = "pip 9.0.1 : Python Package Index",
+    year = {06 Nov 2016 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://pypi.python.org/pypi/pip/}"
+}
+
+@misc{yeoman,
+    author = "Addy Osmani",
+    title = "The web's scaffolding tool for modern webapps | Yeoman",
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{http://yeoman.io/}"
+}
+
+@misc{npm,
+    author = "npm, Inc",
+    title = "npm",
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{http://npmjs.com/}"
+}
