--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,7 @@ The concept is that instead of having a single mainnet to break up blockchains i
 \textbf{Generator Tool}
 \end{center}
 
-The Hadron Wrapper is taking design queues from other package management CLI (Command-Line Interface) tools such as \texttt{pip}, \texttt{yeoman}, and \texttt{npm} to generate private blockchains as their own development projects. Generation through the CLI took is as simple as ‘\texttt{hadron init}’. Through this CLI application, you will be able to interact with the chain in a simplified API that abstracts most of the complexities of blockchain technologies from you.
+The Hadron Wrapper is taking design queues from other package management CLI (Command-Line Interface) tools such as \texttt{pip}\,\cite{pip}, \texttt{yeoman}\,\cite{yeoman}, and \texttt{npm}\,\cite{npm} to generate private blockchains as their own development projects. Generation through the CLI took is as simple as ‘\texttt{hadron init}’. Through this CLI application, you will be able to interact with the chain in a simplified API that abstracts most of the complexities of blockchain technologies from you.
 
 The initial blockchain technology that we are implementing is Ethereum, and so developers will be able to initialize these chains, create accounts, mine blocks, and deploy contracts in a sub-processed instance of \texttt{geth}, Ethereum’s client written in Go.
 
