--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,8 @@
 \usepackage[utf8]{inputenc}
 
 \title{The Hadron Cryptographic Ledger Project: a framework for the rapid development and deployment of blockchain technologies.}
-\author{Stuart Farmer}
-\date{stu@hadronledger.com}
+\author{Stuart Farmer, Mario Hernandez, James Munsch}
+\date{stu@hadronledger.com, mario@hadronledger.com, james@hadronledger.com}
 
 \usepackage{url}
 \def\UrlBreaks{\do\/\do-}
